// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFormScreen snapshot renders ActivityFormScreen correctly 1`] = `
<Styled(Container)>
  <Styled(Header)
    androidStatusBarColor="#7d84b2"
    style={
      Object {
        "backgroundColor": "#7d84b2",
      }
    }
  >
    <Styled(Left)>
      <Styled(Button)
        className="back"
        onPress={[Function]}
        transparent={true}
      >
        <Styled(Icon)
          name="arrow-back"
        />
      </Styled(Button)>
    </Styled(Left)>
    <Styled(Body)>
      <Styled(Title)>
        Fazer a cama
      </Styled(Title)>
    </Styled(Body)>
    <Styled(Right)>
      <Styled(Button)
        className="delete"
        onPress={[Function]}
        transparent={true}
      >
        <Styled(Icon)
          name="md-trash"
        />
      </Styled(Button)>
    </Styled(Right)>
  </Styled(Header)>
  <Styled(Content)>
    <Styled(Form)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          Nome
        </Styled(Label)>
        <Styled(Input)
          className="input"
          onChangeText={[Function]}
          value="Fazer a cama"
        />
      </Styled(Item)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          Rotina
        </Styled(Label)>
        <ItemPicker
          items={
            Array [
              "Após acordar",
              "Antes de dormir",
            ]
          }
          onValueChange={[Function]}
          selected="Após acordar"
        />
      </Styled(Item)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          Cor
        </Styled(Label)>
        <ColorPicker
          color="#7d84b2"
          colors={
            Array [
              Object {
                "code": "#FFDC00",
                "name": "Amarelo",
              },
              Object {
                "code": "#001f3f",
                "name": "Azul Escuro",
              },
              Object {
                "code": "#0074D9",
                "name": "Azul",
              },
              Object {
                "code": "#7FDBFF",
                "name": "Azul Claro",
              },
              Object {
                "code": "#85144b",
                "name": "Bordô",
              },
              Object {
                "code": "#AAAAAA",
                "name": "Cinzento",
              },
              Object {
                "code": "#FF851B",
                "name": "Cor de Laranja",
              },
              Object {
                "code": "#F012BE",
                "name": "Cor de Rosa",
              },
              Object {
                "code": "#01FF70",
                "name": "Lima",
              },
              Object {
                "code": "#DDDDDD",
                "name": "Prateado",
              },
              Object {
                "code": "#111111",
                "name": "Preto",
              },
              Object {
                "code": "#B10DC9",
                "name": "Roxo",
              },
              Object {
                "code": "#2ECC40",
                "name": "Verde",
              },
              Object {
                "code": "#39CCCC",
                "name": "Verde Água",
              },
              Object {
                "code": "#3D9970",
                "name": "Verde Escuro",
              },
              Object {
                "code": "#FF4136",
                "name": "Vermelho",
              },
            ]
          }
          onColorChange={[Function]}
        />
      </Styled(Item)>
      <DurationPickers
        color="#7d84b2"
        onDurationChange={[Function]}
        time={
          Object {
            "goal": "1.00",
            "max": "2.00",
            "min": "0.00",
          }
        }
      />
      <ImagePickerButtons
        color="#7d84b2"
        image="bed"
        onImageChange={[Function]}
        onPhotoChange={[Function]}
        photo="bedroom"
      />
      <BottomButton
        color="#7d84b2"
        onPress={[Function]}
        text="Editar Atividade"
      />
    </Styled(Form)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`ActivityFormScreen snapshot renders ActivityFormScreen correctly 2`] = `
<Styled(Container)>
  <Styled(Header)
    androidStatusBarColor="#0074D9"
    style={
      Object {
        "backgroundColor": "#0074D9",
      }
    }
  >
    <Styled(Left)>
      <Styled(Button)
        className="back"
        onPress={[Function]}
        transparent={true}
      >
        <Styled(Icon)
          name="arrow-back"
        />
      </Styled(Button)>
    </Styled(Left)>
    <Styled(Body)>
      <Styled(Title)>
        Atividade de testes
      </Styled(Title)>
    </Styled(Body)>
    <Styled(Right) />
  </Styled(Header)>
  <Styled(Content)>
    <Styled(Form)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          Nome
        </Styled(Label)>
        <Styled(Input)
          className="input"
          onChangeText={[Function]}
          value="Atividade de testes"
        />
      </Styled(Item)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          Rotina
        </Styled(Label)>
        <ItemPicker
          items={
            Array [
              "Após acordar",
              "Antes de dormir",
            ]
          }
          onValueChange={[Function]}
          selected="Após acordar"
        />
      </Styled(Item)>
      <Styled(Item)
        stackedLabel={true}
      >
        <Styled(Label)>
          Cor
        </Styled(Label)>
        <ColorPicker
          color="#0074D9"
          colors={
            Array [
              Object {
                "code": "#FFDC00",
                "name": "Amarelo",
              },
              Object {
                "code": "#001f3f",
                "name": "Azul Escuro",
              },
              Object {
                "code": "#0074D9",
                "name": "Azul",
              },
              Object {
                "code": "#7FDBFF",
                "name": "Azul Claro",
              },
              Object {
                "code": "#85144b",
                "name": "Bordô",
              },
              Object {
                "code": "#AAAAAA",
                "name": "Cinzento",
              },
              Object {
                "code": "#FF851B",
                "name": "Cor de Laranja",
              },
              Object {
                "code": "#F012BE",
                "name": "Cor de Rosa",
              },
              Object {
                "code": "#01FF70",
                "name": "Lima",
              },
              Object {
                "code": "#DDDDDD",
                "name": "Prateado",
              },
              Object {
                "code": "#111111",
                "name": "Preto",
              },
              Object {
                "code": "#B10DC9",
                "name": "Roxo",
              },
              Object {
                "code": "#2ECC40",
                "name": "Verde",
              },
              Object {
                "code": "#39CCCC",
                "name": "Verde Água",
              },
              Object {
                "code": "#3D9970",
                "name": "Verde Escuro",
              },
              Object {
                "code": "#FF4136",
                "name": "Vermelho",
              },
            ]
          }
          onColorChange={[Function]}
        />
      </Styled(Item)>
      <DurationPickers
        color="#0074D9"
        onDurationChange={[Function]}
        time={
          Object {
            "goal": "3",
            "max": "6",
            "min": "1.5",
          }
        }
      />
      <ImagePickerButtons
        color="#0074D9"
        onImageChange={[Function]}
        onPhotoChange={[Function]}
      />
      <BottomButton
        color="#0074D9"
        onPress={[Function]}
        text="Criar Atividade"
      />
    </Styled(Form)>
  </Styled(Content)>
</Styled(Container)>
`;
